--- a/frontend/index.html
+++ b/frontend/index.html
@@ -666,8 +666,8 @@
 
     <script>
         // API endpoints
-        const AUTH_API = "http://localhost:4000";
-        const PRODUCTS_API = "http://localhost:5000";
+        const AUTH_API = "http://3.15.33.107:4000";
+        const PRODUCTS_API = "http://3.15.33.107:5000";
         
         // Debug logging
         const debugLogs = [];
